# django-mozumder

./: .gitignore  LICENSE  MANIFEST.in  README.rst  requirements.txt  setup.cfg
analytics/: __init__.py  apps.py  signals.py  views.py
analytics/include/sql/: logging.sql
analytics/migrations/: 0001_initial.py
analytics/models/: logging.py
django-mozumder.xcodeproj/: project.pbxproj
django-mozumder.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example/: manage.py
example/blog/: models.py  urls.py
example/example/: asgi.ini  asgi.py  settings.py  urls.py  wsgi.py
example/new/: apps.py  models.py  urls.py  views.py
example/old/: apps.py  urls.py  views.py
example/old_blog/: apps.py  urls.py
i18n/: admin.py
i18n/fixtures/iso-639-3_Code_Tables_20200130/: iso-639-3_20200130.tab  iso-639-3_Name_Index_20200130.tab
i18n/migrations/: 0001_initial.py
i18n/models/: countries.py  language.py  scripts.py
mozumder/: __init__.py  apps.py  middleware.py
mozumder/admin/: __init__.py  development.py  i18n.py  logging.py
mozumder/analytics/: admin.py  apps.py
mozumder/analytics/utilities/: logger.py
mozumder/db/: __init__.py
mozumder/db/materializedviewe/: __init__.py  fields.py  materializedviews.py
mozumder/i18n/: apps.py
mozumder/i18n/fixtures/: iso15924-utf8-20190819.txt
mozumder/i18n/models/: __init__.py  locale.py
mozumder/include/app_template/: apps.py-tpl
mozumder/include/project_template/: .env-tpl  .gitignore  .gitignore-tpl  createdb.psql  manage.py-tpl  requirements.txt
mozumder/include/sql/: log.sql  prepare.sql
mozumder/management/: __init__.py  project.py
mozumder/management/commands/: add_app.py  add_model.py  (+16 more)
mozumder/migrations/: 0001_initial.py
mozumder/models/: __init__.py  development.py  logging.py
mozumder/template/: __init__.py  default.py  errors.py  template.py
mozumder/views/: __init__.py  base.py  errors.py  generic.py  logging.py  zip.py
(+72 files in other folders)
