[metadata]
name = django-mozumder
version = 0.0
description = Django utilities for views, templates, logging, and internationalization.
long_description = file: README.rst
url = https://www.mozumder.net/django-mozumder
author = Bobby Mozumder
author_email = info+django@mozumder.net
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
