[metadata]
name = django-mozumder
version = 0.0
description = Django views, templates, logging, and i18n/l11n utilities
long_description = file: README.rst
url = https://www.mozumder.net/django-mozumder
author = Bobby Mozumder
author_email = django@mozumder.net
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    django >= 3.0
    psycopg2-binary >= 2.8
    
[options.entry_points]
console_scripts =
    mozumder-admin = mozumder.management:create
